[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/AudioButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/sword.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/spear.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/gun.png" type="Texture" id=4]
[ext_resource path="res://theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/ui/staff.png" type="Texture" id=6]
[ext_resource path="res://ui/pre_battle_menu/BattleButtonContainer.gd" type="Script" id=7]

[node name="BattleButtonContainer" type="MarginContainer"]
margin_right = 320.0
margin_bottom = 73.0
rect_min_size = Vector2( 575, 0 )
size_flags_horizontal = 4
theme = ExtResource( 5 )
script = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 575.0
margin_bottom = 73.0

[node name="AudioButton" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_bottom = 73.0
text = "TUTORIAL"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 248.0
margin_right = 327.0
margin_bottom = 73.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 79.0
margin_bottom = 32.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="SwordEnemyCountLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_top = 1.0
margin_right = 79.0
margin_bottom = 30.0
text = ": 99"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 79.0
margin_bottom = 72.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="SpearEnemyCountLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 40.0
margin_top = 1.0
margin_right = 79.0
margin_bottom = 30.0
text = ": 99"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 335.0
margin_right = 343.0
margin_bottom = 73.0
rect_min_size = Vector2( 8, 0 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 351.0
margin_right = 430.0
margin_bottom = 73.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_right = 79.0
margin_bottom = 32.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="GunEnemyCountLabel" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 40.0
margin_top = 1.0
margin_right = 79.0
margin_bottom = 30.0
text = ": 99"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 40.0
margin_right = 79.0
margin_bottom = 72.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 1

[node name="StaffEnemyCountLabel" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 40.0
margin_top = 1.0
margin_right = 79.0
margin_bottom = 30.0
text = ": 99"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 438.0
margin_right = 446.0
margin_bottom = 73.0
rect_min_size = Vector2( 8, 0 )

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 454.0
margin_right = 571.0
margin_bottom = 73.0

[node name="BattleCountLabel" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_right = 117.0
margin_bottom = 29.0
text = "Battles: 99"

[connection signal="pressed" from="HBoxContainer/AudioButton" to="." method="_on_AudioButton_pressed"]
